Add more content to control recent developments notebook

--- a/notebooks/nb_40_RecentDevelopmentsInControl.ipynb
+++ b/notebooks/nb_40_RecentDevelopmentsInControl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "init_cell": true,
     "slideshow": {
@@ -21,28 +21,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/*\n",
+       "This file is mainly copy-pasta from rise's examples\n",
+       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
+       "that was further customized for appliedAI purposes\n",
+       "*/\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
+       "\n",
+       "\n",
+       "/*\n",
+       "body {\n",
+       "    font-family: 'Work Sans', sans-serif !important;\n",
+       "    text-transform: initial !important;\n",
+       "    letter-spacing: initial !important;\n",
+       "    font-weight: 400 !important;\n",
+       "    line-height: 1.5 !important;\n",
+       "    text-size-adjust: 100% !important;\n",
+       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       ".navbar-default .navbar-nav > li > a {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       ".filename {\n",
+       "    font-size: 2.4rem !important;\n",
+       "    color: #212529 !important;\n",
+       "    font-weight: 600 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal, .md-slide {\n",
+       "    color: white !important;\n",
+       "}\n",
+       "\n",
+       "h1, h2 {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "h3, h4, h5, h6 {\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
+       "div.text_cell_render {\n",
+       "    color: #212529 !important;\n",
+       "}\n",
+       "\n",
+       "/*copied from stackoverflow, better spacing between list items*/\n",
+       "li + li {\n",
+       "  margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
+       "    margin-left: 0.1em;\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       ".reveal .rendered_html h1:first-child,\n",
+       ".reveal .rendered_html h2:first-child,\n",
+       ".reveal .rendered_html h3:first-child,\n",
+       ".reveal .rendered_html h4:first-child,\n",
+       ".reveal .rendered_html h5:first-child {\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       ".CodeMirror-lines, .output_text {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       "h1.plan, h2.plan, h3.plan {\n",
+       "    text-align: center;\n",
+       "    padding-bottom: 30px;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>span.plan-bold {\n",
+       "    font-size: 110%;\n",
+       "    padding: 4px;\n",
+       "    font-weight: bold;\n",
+       "    background-color: #eee;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".plan-strike {\n",
+       "    opacity: 0.4;\n",
+       "/*    text-decoration: line-through; */\n",
+       "}\n",
+       "\n",
+       "div.plan-container {\n",
+       "    display: grid;\n",
+       "    grid-template-columns: 50% 50%;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       " * this is to void xarray's html output to show the fallback textual representation\n",
+       " * see also\n",
+       "   * xarray.md and\n",
+       "   * https://github.com/damianavila/RISE/issues/594\n",
+       " */\n",
+       ".reveal pre.xr-text-repr-fallback {\n",
+       "    display: none;\n",
+       "}\n",
+       "\n",
+       "#toc-header, .toc-item li {\n",
+       "    margin: auto !important;\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
+       "    margin: auto !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "#toc-wrapper {\n",
+       "    top: auto !important;\n",
+       "    bottom: auto !important;\n",
+       "    margin-top: 2rem !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "#rise-header {\n",
+       "    margin: 10px;\n",
+       "    left: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-footer {\n",
+       "    margin: 10px;\n",
+       "    right: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-backimage {\n",
+       "    opacity: 0.70;\n",
+       "}\n",
+       "\n",
+       ".reveal img {\n",
+       "    max-width: 100%;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".md-slide.title {\n",
+       "    position: relative;\n",
+       "    top: -50%;\n",
+       "    margin-left: 5%;\n",
+       "    font-size: 4em !important;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%presentation_style"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "init_cell": true,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
+       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
+       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
+       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
+       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
+       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
+       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
+       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
+       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
+       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%load_latex_macros"
    ]
@@ -57,6 +250,23 @@
    "source": [
     "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\">Recent Developments in Control Theory</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "So far we have but we have only considered deterministic systems with no noise or disturbances.\n",
+    "\n",
+    "In this part of the training, we will focus on stochastic systems and how MPC can be used to handle such a class of systems.\n",
+    "\n",
+    "We will also see how MPC can be extended to incoporate learning based on data and how it can be combined with Reinforcement Learning to make systems safer."
    ]
   },
   {
@@ -109,10 +319,175 @@
     "potentially time-varying stage costs of the states and inputs over a possibly infinite horizon $N$:\n",
     "\n",
     "$$\n",
-    "J_t = E\\left(\\sum \\limits_{k=0}^{N} g_t(x_k, u_k, k)\\right),\n",
+    "J_t = E\\left(\\sum \\limits_{k=0}^{T} g_t(x_k, u_k, k)\\right),\n",
     "$$\n",
     "\n",
     "where the expected value is taken with respect to all random variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Stochastic Predictive Control\n",
+    "\n",
+    "The constrained stochastic optimal control problem can be formulated as:\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}\\\\\n",
+    "J_t^* = \\displaystyle\\min_{\\pi_{k}} & \n",
+    "E\\left[\\sum\\limits_{k=0}^{T} g_t(x_k, u_k, k)\\right]\n",
+    "\\\\\n",
+    "\\text{subject to} & x_{k + 1}= f_t(x_k, u_k, k, w_k, \\theta_t)\n",
+    "\\\\\n",
+    "& u_k = \\pi_k(x_0, \\dots, x_k)\\\\\n",
+    "& \\bar{W} = [w_0, \\dots, w_{N - 1}] \\sim \\mathcal{Q}^{\\bar{W}}, \\theta_t \\sim \\mathcal{Q}^{\\theta_t}\\\\\n",
+    "& P[\\bar{X}] = [x_0, \\dots, x_{N}] \\in \\bar{X}_j ) \\ge p_j, \\forall j = 1, \\dots, n_{cx}\\\\\n",
+    "& P[\\bar{U}] = [u_0, \\dots, u_{N - 1}] \\in \\bar{U}_j ) \\ge p_j, \\forall j = 1, \\dots , n_{cu}\\\\\n",
+    "\\end{array},\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Optimizing over a sequence of control laws $\\{\\pi_k\\}$, which can make use of all information in the\n",
+    "form of state measurements $x_k$ up to time step $k$. Problems of this form are in\n",
+    "general very hard to solve, and direct efforts typically rely on some form of discretization in space\n",
+    "and approximate dynamic programming or reinforcement learning.\n",
+    "\n",
+    "A notable exception, similar to what we have seen previously, is linear systems under additive noise and quadratic stage costs in the unconstrained setting, for which an exact solution, such as the standard linear quadratic regulator (LQR)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "MPC approximates the previous problem by repeatedly solving a simplified version of the\n",
+    "problem initialized at the currently measured state $x_k$ over a shorter horizon $N$\n",
+    "in a receding- horizon fashion.\n",
+    "\n",
+    "We introduce the prediction model:\n",
+    "\n",
+    "$$\n",
+    "x_{i+1|k} = f(x_{i|k}, u_{i|k}, i + k, w_{i|k}, \\theta),\n",
+    "$$\n",
+    "\n",
+    "where $f$ is the prediction dynamics. It typically aims at approximating the true dynamics but often differs, e.g.,\n",
+    "for computational reasons or because a succinct description of the true dynamics is unavailable.\n",
+    "\n",
+    "We use the subscript $i|k$ to emphasize predictive quantities, where, e.g., $x_{i|k}$ is the i-step-ahead prediction of the state, initialized at $x_{0|k} = x_k$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The most widespread MPC formulations of are nominal MPC schemes, which do not consider any uncertainties in the prediction model but instead rely exclusively on the compensation of uncertainties via feedback and by re-solving the problem at the next sampling instance.\n",
+    "\n",
+    "In nominal MPC, the optimization can be performed over control sequences $U = [u_{0|k}, \\dots , u_{N - 1|k}]$ rather than policies, resulting in the constrained optimal control problem\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}\\\\\n",
+    "J^∗ &= \\displaystyle\\min_{U} g_f(x_{N|k}, u_{N|k}, k + N) + \\sum\\limits_{i=0}^{N-1} g(x_{i|k}, u_{i|k}, i + k)\\\\\n",
+    "\\text{subject to} & x_{i+1|k} = f(x_{i|k}, u_{i|k}, i + k)\\\\\n",
+    "& U = [u_{0|k}, \\dots, u_{N|k}] \\in U_j, \\forall j = 1, \\dots, n_{cu} \\\\\n",
+    "& X = [x_{0|k}, \\dots, x_{N|k}] \\in X_j \\forall j = 1, \\dots, n_{cx} \\\\\n",
+    "& x_{N|k} \\in X_f\\\\\n",
+    "& x_{0|k} = x_k\\\\\n",
+    "\\end{array}.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The control law is then implicitly defined through the optimization problem as:\n",
+    "\n",
+    "$$\n",
+    "π^{\\text{MPC}}(x_k, k) = u_{0|k}^*,\n",
+    "$$\n",
+    "\n",
+    "where $u_{0|k}^*$ is the first element of the computed optimal control sequence $U^∗$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Control Design Challenges"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Feasibility and Optimality with Short Horizons\n",
+    "\n",
+    "The predictive controller plans the system's trajectory over a finite time window of length $N$, which is usually much smaller than the task duration $T$.\n",
+    "\n",
+    "For a short $N$ , the controller takes only shortsighted control actions, which may be unsafe or result in\n",
+    "poor closed-loop performance.\n",
+    "\n",
+    "For instance, in autonomous racing, a predictive controller that plans the vehicle's trajectory over a short horizon without accounting for an upcoming curve accelerate to the point that safe turning becomes infeasible.\n",
+    "\n",
+    "To mitigate the effect of the shortened horizon, a particular cost $g_f(x{N|k}, u_{N|k}, k + N)$\n",
+    "and constraint $X_f$ on the last predicted state are imposed to approximate the cost and the effect of the\n",
+    "constraints over the remainder of the possibly infinite control horizon $T$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Policy Approximation\n",
+    "\n",
+    "Satisfying input and state constraints in the presence of uncertainty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chance-Constraint Approximation\n",
+    "\n",
+    "Ensuring computational tractability by properly reformulating constraints and costs and parameterizing control. policies\n",
+    "\n",
+    "There is no systematic and universal solution to the third challenge, and often the chosen approach is application dependent. Fortunately, the first and second challenges can be addressed by using data. "
    ]
   },
   {
@@ -138,35 +513,13 @@
     "satisfying operating constraints.\n",
     "\n",
     "Uncertainty in MPC is handled by optimizing over multiple uncertain forecasts. In this case, performance index and\n",
-    "operating constraints take the form of functions defined over a probability space, and the resulting technique is called stochastic MPC."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Stochastic Predictive Control"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Control Design Challenges\n",
+    "operating constraints take the form of functions defined over a probability space, and the resulting technique is called stochastic MPC.\n",
     "\n",
-    "- Ensuring recursive feasibility and achieving optimality despite a short prediction horizon.\n",
-    "- Satisfying input and state constraints in the presence of uncertainty.\n",
-    "- Ensuring computational tractability by properly reformulating constraints and costs and parameterizing control. policies\n",
+    "In this case, we are longer searching for a deterministic control sequence but instead for a stochastic feedback control policy:\n",
     "\n",
-    "There is no systematic and universal solution to the third challenge, and often the chosen approach is application dependent. Fortunately, the first and second challenges can be addressed by using data. "
+    "$$\n",
+    "u_t = \\pi_t(x_t)\n",
+    "$$"
    ]
   },
   {
@@ -177,24 +530,16 @@
     }
    },
    "source": [
-    "##  Data-Driven Stochastic Predictive Control"
+    "##  Scenario MPC"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Learning Model Predictive Control"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": []
   },
   {
@@ -216,19 +561,15 @@
     }
    },
    "source": [
-    "Learning-based MPC addresses the automated and data-driven generation or adaptation of el-\n",
-    "ements of the MPC formulation such that the control performance with respect to the desired\n",
-    "closed-loop system behavior—i.e., the general optimal control problem (Equation 4)—is im-\n",
-    "proved. The setup in which this learning takes place can be diverse. For instance, offline learning\n",
+    "Learning-based MPC addresses the automated and data-driven generation or adaptation of elements of the MPC formulation such that the control performance with respect to the desired closed-loop system behavior is improved.\n",
+    "\n",
+    "The setup in which this learning takes place can be diverse. For instance, offline learning\n",
     "considers the adaptation of the controller between different trials or episodes of a control task,\n",
-    "during which data are collected. In methods that learn online, on the other hand, the controller is\n",
-    "adjusted during closed-loop operation (e.g., while performing repetitive tasks) or using the data\n",
-    "collected during one task execution.\n",
-    "While much of the research in learning-based MPC is focusing on automatically improving the\n",
-    "model quality, which is the most obvious component affecting MPC performance, several research\n",
-    "efforts are addressing the formulation of the MPC problem directly or utilizing the MPC concept\n",
-    "to satisfy constraints during learning-based control. In the remainder of the review, we discuss the\n",
-    "research in the following three categories:"
+    "during which data are collected.\n",
+    "\n",
+    "In methods that learn online, on the other hand, the controller is adjusted during closed-loop operation (e.g., while performing repetitive tasks) or using the data collected during one task execution.\n",
+    "\n",
+    "While much of the research in learning-based MPC has focused on automatically improving the model quality, which is the most obvious component affecting MPC performance, several research efforts are addressing the formulation of the MPC problem directly or utilizing the MPC concept to satisfy constraints during learning-based control."
    ]
   },
   {
@@ -244,8 +585,7 @@
     "MPC relies heavily on suitable and sufficiently accurate\n",
     "model representations of the system dynamics. One path of learning-based MPC considers\n",
     "the automatic adjustment of the system model, either during operation or between different\n",
-    "operational instances. Section 3 provides an overview of this rather broad direction and\n",
-    "related issues."
+    "operational instances."
    ]
   },
   {
