--- a/notebooks/nb_40_RecentDevelopmentsInControl.ipynb
+++ b/notebooks/nb_40_RecentDevelopmentsInControl.ipynb
@@ -78,7 +78,7 @@
     "    create_inverted_pendulum_environment,\n",
     "    InvertedPendulumParameters,\n",
     "    animate_full_inverted_pendulum_simulation,\n",
-    "    simulate_environment\n",
+    "    simulate_environment,\n",
     ")\n",
     "\n",
     "warnings.simplefilter(\"ignore\", UserWarning)\n",
@@ -412,8 +412,8 @@
     "mu_p = ip_parameters.mu_p\n",
     "mu_c = ip_parameters.mu_c\n",
     "# Uncertain parameters\n",
-    "m = model.set_variable('_p', 'm')\n",
-    "M = model.set_variable('_p', 'M')"
+    "m = model.set_variable(\"_p\", \"m\")\n",
+    "M = model.set_variable(\"_p\", \"M\")"
    ]
   },
   {
@@ -428,17 +428,10 @@
    "source": [
     "numerator = (\n",
     "    (M + m) * g * casadi.sin(theta)\n",
-    "    - casadi.cos(theta) * (\n",
-    "        gamma * u \n",
-    "        + m * l * dtheta**2 * casadi.sin(theta)\n",
-    "        - mu_c * dpos\n",
-    "    )\n",
+    "    - casadi.cos(theta) * (gamma * u + m * l * dtheta**2 * casadi.sin(theta) - mu_c * dpos)\n",
     "    - (M + m) / (m * l) * mu_p * dtheta\n",
     ")\n",
-    "denominator = (\n",
-    "    (1+k)*(M + m) * l\n",
-    "    - m * l * casadi.cos(theta) ** 2\n",
-    ")\n",
+    "denominator = (1 + k) * (M + m) * l - m * l * casadi.cos(theta) ** 2\n",
     "ddtheta = numerator / denominator"
    ]
   },
@@ -454,14 +447,10 @@
    "source": [
     "numerator = (\n",
     "    m * g * casadi.cos(theta) * casadi.sin(theta)\n",
-    "    - (1+k)*(\n",
-    "        gamma * u\n",
-    "        + m * l * dtheta**2 * casadi.sin(theta)\n",
-    "        - mu_c * dpos\n",
-    "    )\n",
+    "    - (1 + k) * (gamma * u + m * l * dtheta**2 * casadi.sin(theta) - mu_c * dpos)\n",
     "    - mu_p * dtheta * casadi.cos(theta) / l\n",
     ")\n",
-    "denominator = m * casadi.cos(theta)**2 - (1+k)*(M + m)\n",
+    "denominator = m * casadi.cos(theta) ** 2 - (1 + k) * (M + m)\n",
     "ddpos = numerator / denominator"
    ]
   },
@@ -615,7 +604,9 @@
    "source": [
     "%%capture\n",
     "max_steps = 200\n",
-    "env = create_inverted_pendulum_environment(max_steps=max_steps, cutoff_angle=np.inf, initial_angle=0.99*np.pi)\n",
+    "env = create_inverted_pendulum_environment(\n",
+    "    max_steps=max_steps, cutoff_angle=np.inf, initial_angle=0.99 * np.pi\n",
+    ")\n",
     "controller = MPCController(mpc)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)"
    ]
