Add missing import

--- a/notebooks/nb_40_RecentDevelopmentsInControl.ipynb
+++ b/notebooks/nb_40_RecentDevelopmentsInControl.ipynb
@@ -63,6 +63,7 @@
     "from dataclasses import dataclass\n",
     "from typing import Protocol\n",
     "\n",
+    "import casadi\n",
     "import do_mpc\n",
     "import mediapy as media\n",
     "import matplotlib.pyplot as plt\n",
